2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS file for the upcoming beta2 release.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-icon-view.c: Add hack for drawing the background of text 
	  renderers inside the icon view. GtkIconView uses a similar hack, but
	  this should really be fixed in GtkCellRendererText.

2008-11-10	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-icon-view.c: Revert accidently committed painting code.

2008-11-10	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in, exo/exo-md5.c: Get rid of external MD5 functions.

2008-11-06	Brian Tarricone <bjt23@cornell.edu>

	* exo-helper/main.c: Fix compile against glib < 2.14.

2008-11-03	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-url.c: Split up assignment and conditional into separate 
	  lines to make the code more readable.

2008-11-03	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-url.c: Check whether the given URL can be transformed into
	  a local filename before going through the regular expressions for
	  email addresses and browser URLs. Also don't allow additional
	  characters before and after email addresses and browser URLs. This
	  handles filenames with @ properly and should fix bug #4330.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Add 'svn' version tag.
	* exo-helper/exo-helper-chooser-dialog.[ch]: Add function to
	  retrieve the toplevel container beneath the GtkDialog's
	  GtkVBox.
	* exo-helper/exo-preferred-applications.desktop.in: Add
	  X-XfcePluggable and X-XfceHelpFile keys.
	* exo-helper/exo-preferred-applications.in: Pass any extra
	  command-line arguments on to exo-helper-0.3.
	* exo-helper/main.c: Use GOption framework for parsing the
	  command line.  Add --socket-id parameter so the dialog can
	  be embedded in the settings manager.

2008-10-10	Jannis Pohlmann <jannis@xfce.org>

	* exo-helper/helpers/Makefile.am, 
	  exo-helper/helpers/midori.desktop.in.in: Add Midori helper. Patch 